# testboiler

./: README.md  description.md  disadvantages.md  errors.md  main.py  plan.md  pyproject.toml
docs/: description.md  disadvantages.md
examples/builtin_stdlib/: README.md  config.yml  quickboiler.cfg
examples/builtin_stdlib/tests/pytest/: test_json_module.py
examples/builtin_stdlib/tests/unittest/: test_json_module.py
quickboiler_template/: quickboiler.cfg  sitecustomize.py
quickboiler_template/tests/pytest/: test_1.py
quickboiler_template/tests/unittest/: test_1.py
src/testboiler/: __main__.py
template/: config.yml  quickboiler.cfg
testboiler/: __main__.py
testboiler/template/tests/pytest/: test_1.py  test_with_file.py
testboiler/template/tests/unittest/: test_with_file.py
tests/pytest/: test_cli_project_environment.py
