[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "testboiler"
version = "0.1.0"
description = "Boilerplate for quickly testing Python libraries with pytest and unittest"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
testboiler = "testboiler.__main__:main"

[tool.setuptools]
packages = ["testboiler"]
include-package-data = true

[tool.setuptools.package-data]
testboiler = ["template/**/*"]
